--- a/index.html
+++ b/index.html
@@ -99,6 +99,46 @@
             const [isLoading, setIsLoading] = useState(false);
             const [textInput, setTextInput] = useState('');
 
+            // --- Stato per microfono ---
+            const [isRecording, setIsRecording] = useState(false);
+            const recognitionRef = useRef(null);
+
+            // Inizializza Web Speech API
+            useEffect(() => {
+                const SpeechRecognition =
+                    window.SpeechRecognition || window.webkitSpeechRecognition;
+                if (!SpeechRecognition) {
+                    console.warn('SpeechRecognition non supportato da questo browser.');
+                    return;
+                }
+
+                const recognition = new SpeechRecognition();
+                recognition.lang = 'it-IT';
+                recognition.continuous = true;
+                recognition.interimResults = true; // risultati parziali mentre parli[web:16]
+
+                recognition.onresult = (event) => {
+                    let transcript = '';
+                    for (let i = event.resultIndex; i < event.results.length; i++) {
+                        transcript += event.results[i][0].transcript;
+                    }
+                    // Accoda testo dettato al contenuto esistente
+                    setTextInput(prev => (prev ? prev + ' ' : '') + transcript.trim());
+                };
+
+                recognition.onerror = (event) => {
+                    console.error('Errore riconoscimento vocale:', event.error);
+                    setIsRecording(false);
+                };
+
+                recognition.onend = () => {
+                    // viene chiamato quando si ferma (anche da stop())
+                    setIsRecording(false);
+                };
+
+                recognitionRef.current = recognition;
+            }, []);
+
             useEffect(() => {
                 if (autoSave) {
                     localStorage.setItem('chef_items', JSON.stringify(items));
@@ -186,7 +226,6 @@
                             message: "La tua API Key non è corretta o è scaduta. Controlla le impostazioni."
                         });
                     } else {
-                        // Fallback: aggiunta manuale se l'AI fallisce per motivi tecnici minori
                         setItems(prev => [...prev, { id: Date.now(), name: query, category: "Altro", bought: false }]);
                         setTextInput('');
                     }
@@ -347,6 +386,41 @@
                                         rows="1" 
                                     />
                                 </div>
+
+                                {/* Pulsante microfono */}
+                                <button
+                                    type="button"
+                                    onClick={() => {
+                                        const rec = recognitionRef.current;
+                                        if (!rec) {
+                                            alert('Riconoscimento vocale non supportato dal browser.');
+                                            return;
+                                        }
+                                        if (isRecording) {
+                                            rec.stop();
+                                        } else {
+                                            try {
+                                                rec.start();
+                                                setIsRecording(true);
+                                            } catch (e) {
+                                                console.error(e);
+                                            }
+                                        }
+                                    }}
+                                    className={`w-10 h-10 rounded-full flex items-center justify-center shrink-0 transition-all ${
+                                        isRecording
+                                            ? 'bg-red-500 text-white shadow-lg shadow-red-200'
+                                            : 'bg-slate-100 text-slate-400'
+                                    }`}
+                                >
+                                    <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" strokeWidth="2.5">
+                                        <path d="M12 14a3 3 0 0 0 3-3V7a3 3 0 0 0-6 0v4a3 3 0 0 0 3 3z" />
+                                        <path d="M19 11a7 7 0 0 1-14 0" />
+                                        <line x1="12" y1="18" x2="12" y2="22" />
+                                        <line x1="8" y1="22" x2="16" y2="22" />
+                                    </svg>
+                                </button>
+
                                 <button 
                                     onClick={() => processWithAI(textInput)} 
                                     disabled={!textInput.trim() || isLoading} 
@@ -376,7 +450,7 @@
                     {showConfirmReset && (
                         <div className="fixed inset-0 bg-slate-900/80 backdrop-blur-sm z-[60] flex items-center justify-center p-6" onClick={() => setShowConfirmReset(false)}>
                             <div className="bg-white rounded-[2.5rem] w-full max-w-xs p-8 shadow-2xl text-center" onClick={e => e.stopPropagation()}>
-                                <h3 className="text-xl font-black text-slate-800 mb-2 uppercase italic tracking-tighter">Svuota tutto?</h3>
+                                <h3 className="text-xl font-black text-slate-800 mb-2 uppercase italic tracking-titter">Svuota tutto?</h3>
                                 <p className="text-slate-400 text-xs font-bold leading-relaxed mb-8 uppercase tracking-widest">Perderai tutti i prodotti.</p>
                                 <div className="flex flex-col gap-3">
                                     <button onClick={() => { setItems([]); setRecipes([]); setShowConfirmReset(false); }} className="w-full bg-red-500 text-white rounded-2xl py-4 text-xs font-black uppercase tracking-widest">Svuota ora</button>
