--- a/index.html
+++ b/index.html
@@ -103,60 +103,39 @@
             const [isRecording, setIsRecording] = useState(false);
             const recognitionRef = useRef(null);
 
-            // Inizializza Web Speech API
-// --- Stato per microfono ---
-const [isRecording, setIsRecording] = useState(false);
-const recognitionRef = useRef(null);
+            // Inizializza Web Speech API (solo risultati finali)
+            useEffect(() => {
+                const SpeechRecognition =
+                    window.SpeechRecognition || window.webkitSpeechRecognition;
+                if (!SpeechRecognition) {
+                    console.warn('SpeechRecognition non supportato da questo browser.');
+                    return;
+                }
 
-useEffect(() => {
-    const SpeechRecognition =
-        window.SpeechRecognition || window.webkitSpeechRecognition;
-    if (!SpeechRecognition) {
-        console.warn('SpeechRecognition non supportato da questo browser.');
-        return;
-    }
+                const recognition = new SpeechRecognition();
+                recognition.lang = 'it-IT';
+                recognition.continuous = true;      // più frasi nella stessa sessione[web:37]
+                recognition.interimResults = false; // solo risultati finali, niente eco[web:3][web:23]
 
-    const recognition = new SpeechRecognition();
-    recognition.lang = 'it-IT';
-    recognition.continuous = true;
-    recognition.interimResults = true;
+                recognition.onresult = (event) => {
+                    const lastResult = event.results[event.results.length - 1];
+                    const text = lastResult[0].transcript;
 
-    let finalTranscript = '';
+                    // Accoda una sola volta al testo esistente
+                    setTextInput(prev => (prev ? prev + ' ' : '') + text.trim());
+                };
 
-    recognition.onstart = () => {
-        finalTranscript = '';
-    };
+                recognition.onerror = (event) => {
+                    console.error('Errore riconoscimento vocale:', event.error);
+                    setIsRecording(false);
+                };
 
-    recognition.onresult = (event) => {
-        let interimTranscript = '';
+                recognition.onend = () => {
+                    setIsRecording(false);
+                };
 
-        for (let i = event.resultIndex; i < event.results.length; i++) {
-            const res = event.results[i];
-            const text = res[0].transcript;
-
-            if (res.isFinal) {
-                finalTranscript += text + ' ';
-            } else {
-                interimTranscript += text + ' ';
-            }
-        }
-
-        const combined = (finalTranscript + interimTranscript).trim();
-        setTextInput(combined);
-    };
-
-    recognition.onerror = (event) => {
-        console.error('Errore riconoscimento vocale:', event.error);
-        setIsRecording(false);
-    };
-
-    recognition.onend = () => {
-        setIsRecording(false);
-    };
-
-    recognitionRef.current = recognition;
-}, []);
-
+                recognitionRef.current = recognition;
+            }, []);
 
             useEffect(() => {
                 if (autoSave) {
@@ -524,7 +503,7 @@ useEffect(() => {
                                     setApiKey(val);
                                     localStorage.setItem('chef_api_key', val);
                                     setShowSettings(false);
-                                }} className="w-full bg-blue-600 text-white rounded-2xl py-4 text-xs font-black uppercase tracking-widest shadow-lg shadow-blue-200">Salva e Chiudi</button>
+                                }} className="w-full bg-blue-600 text:white rounded-2xl py-4 text-xs font-black uppercase tracking-widest shadow-lg shadow-blue-200">Salva e Chiudi</button>
                             </div>
                         </div>
                     )}
