--- a/index.html
+++ b/index.html
@@ -497,6 +497,24 @@
                                             <span className="slider"></span>
                                         </label>
                                     </div>
+
+<div className="flex items-center justify-between p-4 bg-slate-50 rounded-2xl border border-slate-100">
+  <span className="text-[10px] font-black text-slate-700 uppercase tracking-tight">Guida rapida</span>
+  <button
+    type="button"
+    onClick={() => window.open('help.html', '_blank')}
+    className="p-2 rounded-full bg-slate-800 text-white hover:bg-slate-700 active:scale-95 transition"
+    aria-label="Apri guida rapida"
+  >
+    <svg viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="currentColor" strokeWidth="2.5">
+      <circle cx="12" cy="12" r="10" />
+      <path d="M9.5 9a2.5 2.5 0 0 1 5 0c0 1.5-1 2-1.8 2.5-.7.4-1.2.8-1.2 1.5v1" />
+      <line x1="12" y1="17" x2="12" y2="17.1" />
+    </svg>
+  </button>
+</div>
+
+                                    
                                 </div>
                                 <button onClick={() => {
                                     const val = document.getElementById('key_field').value.trim();
