--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Smart Grocery Chef Pro</title>
     
     <link rel="icon" type="image/png" href="SpesaSmart.png?v=1">
+    <link rel="apple-touch-icon" href="SpesaSmart.png?v=1">
+    <link rel="manifest" href="site.webmanifest">
+
     
     <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
