--- a/index.html
+++ b/index.html
@@ -168,49 +168,121 @@
             return (
                 <div className="max-w-md mx-auto min-h-screen px-4 pt-6 main-container">
 				
-					{/* Header Azioni */}
-                         <div className="flex items-center bg-white p-1 rounded-xl border border-slate-200 shadow-sm gap-0.5">
-                            <button onClick={() => setHideBought(!hideBought)} className="has-tooltip p-2 text-slate-400 hover:text-blue-600 active:scale-90 transition-all">
-                                {hideBought ? 
-                                    <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" strokeWidth="2.5"><path d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"/><line x1="1" y1="1" x2="23" y2="23"/></svg> :
-                                    <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" strokeWidth="2.5"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/><circle cx="12" cy="12" r="3"/></svg>
-                                }
-                                <span className="tooltip">{hideBought ? 'Mostra presi' : 'Nascondi presi'}</span>
-                            </button>
+			{/* Header Azioni */}
+<div className="flex justify-between items-center mb-6">
+  {/* Logo + titolo */}
+  <div className="flex items-center gap-2">
+    <div className="w-8 h-8 bg-blue-600 rounded-lg flex items-center justify-center shadow-md">
+      <svg viewBox="0 0 24 24" width="16" height="16" fill="white">
+        <path d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zM1 2v2h2l3.6 7.59-1.35 2.45c-.16.28-.25.61-.25.96 0 1.1.9 2 2 2h12v-2H7.42c-.14 0-.25-.11-.25-.25l.03-.12.9-1.63h7.45c.75 0 1.41-.41 1.75-1.03l3.58-6.49c.08-.14.12-.31.12-.48 0-.55-.45-1-1-1H5.21l-.94-2H1zm16 16c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z"/>
+      </svg>
+    </div>
+    <h1 className="text-lg font-black text-slate-800 italic uppercase">
+      Chef Spesa
+    </h1>
+  </div>
 
-                            <button onClick={toggleGlobalCollapse} className="has-tooltip p-2 text-slate-400 hover:text-slate-600 active:scale-90 transition-all">
-                                {areAllCollapsed ? 
-                                    <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" strokeWidth="2.5"><polyline points="7 13 12 18 17 13"/><polyline points="7 6 12 11 17 6"/></svg> :
-                                    <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" strokeWidth="2.5"><polyline points="17 11 12 6 7 11"/><polyline points="17 18 12 13 7 18"/></svg>
-                                }
-                                <span className="tooltip">{areAllCollapsed ? 'Espandi tutti' : 'Riduci tutti'}</span>
-                            </button>
+  {/* Pulsanti azioni */}
+  <div className="flex items-center bg-white p-1 rounded-xl border border-slate-200 shadow-sm gap-0.5">
+    {/* Nascondi/mostra presi */}
+    <button
+      onClick={() => setHideBought(!hideBought)}
+      className="has-tooltip p-2 text-slate-400 hover:text-blue-600 active:scale-90 transition-all"
+    >
+      {hideBought ? (
+        <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" strokeWidth="2.5">
+          <path d="M17.94 17.94A10.07 10.07 0 0 1 12 20c-7 0-11-8-11-8a18.45 18.45 0 0 1 5.06-5.94M9.9 4.24A9.12 9.12 0 0 1 12 4c7 0 11 8 11 8a18.5 18.5 0 0 1-2.16 3.19m-6.72-1.07a3 3 0 1 1-4.24-4.24"/>
+          <line x1="1" y1="1" x2="23" y2="23"/>
+        </svg>
+      ) : (
+        <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" strokeWidth="2.5">
+          <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
+          <circle cx="12" cy="12" r="3"/>
+        </svg>
+      )}
+      <span className="tooltip">
+        {hideBought ? 'Mostra presi' : 'Nascondi presi'}
+      </span>
+    </button>
 
-                            <div className="w-[1px] h-4 bg-slate-200 mx-1"></div>
+    {/* Collassa/espandi categorie */}
+    <button
+      onClick={toggleGlobalCollapse}
+      className="has-tooltip p-2 text-slate-400 hover:text-slate-600 active:scale-90 transition-all"
+    >
+      {areAllCollapsed ? (
+        <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" strokeWidth="2.5">
+          <polyline points="7 13 12 18 17 13"/>
+          <polyline points="7 6 12 11 17 6"/>
+        </svg>
+      ) : (
+        <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" strokeWidth="2.5">
+          <polyline points="17 11 12 6 7 11"/>
+          <polyline points="17 18 12 13 7 18"/>
+        </svg>
+      )}
+      <span className="tooltip">
+        {areAllCollapsed ? 'Espandi tutti' : 'Riduci tutti'}
+      </span>
+    </button>
 
-                            <button onClick={clearBoughtItems} className="has-tooltip p-2 text-slate-400 hover:text-orange-500 active:scale-90 transition-all">
-                                <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" strokeWidth="2.5"><path d="M20 6L9 17l-5-5"/><path d="M3 6h18" opacity="0.3"/><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6" opacity="0.3"/></svg>
-                                <span className="tooltip">Pulisci presi</span>
-                            </button>
+    <div className="w-[1px] h-4 bg-slate-200 mx-1"></div>
 
-                            <button onClick={() => setShowConfirmReset(true)} className="has-tooltip p-2 text-slate-400 hover:text-red-500 active:scale-90 transition-all">
-                                <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" strokeWidth="2.5"><polyline points="3 6 5 6 21 6"/><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/><line x1="10" y1="11" x2="10" y2="17"/><line x1="14" y1="11" x2="14" y2="17"/></svg>
-                                <span className="tooltip">Svuota lista</span>
-                            </button>
+    {/* Pulisci solo presi */}
+    <button
+      onClick={clearBoughtItems}
+      className="has-tooltip p-2 text-slate-400 hover:text-orange-500 active:scale-90 transition-all"
+    >
+      <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" strokeWidth="2.5">
+        <path d="M20 6L9 17l-5-5"/>
+        <path d="M3 6h18" opacity="0.3"/>
+        <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6" opacity="0.3"/>
+      </svg>
+      <span className="tooltip">Pulisci presi</span>
+    </button>
 
-                            <div className="w-[1px] h-4 bg-slate-200 mx-1"></div>
+    {/* Svuota lista */}
+    <button
+      onClick={() => setShowConfirmReset(true)}
+      className="has-tooltip p-2 text-slate-400 hover:text-red-500 active:scale-90 transition-all"
+    >
+      <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" strokeWidth="2.5">
+        <polyline points="3 6 5 6 21 6"/>
+        <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/>
+        <line x1="10" y1="11" x2="10" y2="17"/>
+        <line x1="14" y1="11" x2="14" y2="17"/>
+      </svg>
+      <span className="tooltip">Svuota lista</span>
+    </button>
 
-                            <button onClick={() => setShowHistory(true)} className="has-tooltip p-2 text-slate-400 hover:text-slate-600 active:scale-90 transition-all">
-                                <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" strokeWidth="2.5"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>
-                                <span className="tooltip">Cronologia</span>
-                            </button>
+    <div className="w-[1px] h-4 bg-slate-200 mx-1"></div>
 
-                            <button onClick={() => setShowSettings(true)} className="has-tooltip p-2 text-slate-400 hover:text-slate-600 active:scale-90 transition-all">
-                                <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" strokeWidth="2.5"><circle cx="12" cy="12" r="3"/><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"/></svg>
-                                <span className="tooltip">Impostazioni</span>
-                            </button>
-                        </div>
-                    </div>
+    {/* Cronologia */}
+    <button
+      onClick={() => setShowHistory(true)}
+      className="has-tooltip p-2 text-slate-400 hover:text-slate-600 active:scale-90 transition-all"
+    >
+      <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" strokeWidth="2.5">
+        <circle cx="12" cy="12" r="10"/>
+        <polyline points="12 6 12 12 16 14"/>
+      </svg>
+      <span className="tooltip">Cronologia</span>
+    </button>
+
+    {/* Impostazioni */}
+    <button
+      onClick={() => setShowSettings(true)}
+      className="has-tooltip p-2 text-slate-400 hover:text-slate-600 active:scale-90 transition-all"
+    >
+      <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" strokeWidth="2.5">
+        <circle cx="12" cy="12" r="3"/>
+        <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"/>
+      </svg>
+      <span className="tooltip">Impostazioni</span>
+    </button>
+  </div>
+</div>
+
 
                     <div className="space-y-4">
                         {Object.entries(groupedItems).sort().map(([cat, list]) => (
@@ -281,7 +353,7 @@
                                     setApiKey(val);
                                     localStorage.setItem('chef_api_key', val);
                                     setShowSettings(false);
-                                }} className="w-full bg-blue-600 text:white rounded-2xl py-4 text-xs font-black uppercase tracking-widest shadow-lg shadow-blue-200">Salva e Chiudi</button>
+                                }} className="w-full bg-blue-600 text-white rounded-2xl py-4 text-xs font-black uppercase tracking-widest shadow-lg shadow-blue-200">Salva e Chiudi</button>
 								
                             </div>
                         </div>
