--- a/index.html
+++ b/index.html
@@ -72,11 +72,7 @@
 			    return {};
 			  }
 			});
-
-			
-			//Stato per la cronologia e per la conferma pulizia “presi” (aggiunto 24/01/2026)
-			const [history, setHistory] = useState(() => JSON.parse(localStorage.getItem('chef_history') || '[]'));
-			
+	
             useEffect(() => {
                 const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
                 if (SpeechRecognition) {
@@ -104,21 +100,21 @@
             }, [items, recipes, history, autoSave, aiEnabled]);
 
 			// 1) Salvataggi mancanti per le impostazioni (aggiunto 24/01/2026)
-			useEffect(() => {
-			    localStorage.setItem('chef_autosave', autoSave ? 'true' : 'false');
-			    localStorage.setItem('chef_show_social', showSocial ? 'true' : 'false');
-			}, [autoSave, showSocial]);
+			//useEffect(() => {
+			//    localStorage.setItem('chef_autosave', autoSave ? 'true' : 'false');
+			//    localStorage.setItem('chef_show_social', showSocial ? 'true' : 'false');
+			//}, [autoSave, showSocial]);
 			
 			// 2) Recupero salvataggi per le impostazioni al mount (se vuoi tenerli allineati) (aggiunto 24/01/2026)
-			useEffect(() => {
-			    const savedAuto = localStorage.getItem('chef_autosave');
-			    const savedShow = localStorage.getItem('chef_show_social');
-			    const savedAI   = localStorage.getItem('chef_ai_enabled');
+			//useEffect(() => {
+			//    const savedAuto = localStorage.getItem('chef_autosave');
+			//    const savedShow = localStorage.getItem('chef_show_social');
+			//    const savedAI   = localStorage.getItem('chef_ai_enabled');
 			
-			    if (savedAuto !== null) setAutoSave(savedAuto !== 'false');
-			    if (savedShow !== null) setShowSocial(savedShow !== 'false');
-			    if (savedAI   !== null) setAiEnabled(savedAI !== 'false');
-			}, []);
+			//    if (savedAuto !== null) setAutoSave(savedAuto !== 'false');
+			//    if (savedShow !== null) setShowSocial(savedShow !== 'false');
+			//    if (savedAI   !== null) setAiEnabled(savedAI !== 'false');
+			//}, []);
 
 			// Fine aggiunte 24/01/2026)
 
@@ -191,11 +187,19 @@
                     const response = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${apiKey}`, {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify({
-                            contents: [{ parts: [{ text: `Input: "${query}"` }] }],
-                            systemInstruction: { parts: [{ text: `Restituisci SOLO JSON: {"add": [{"n": "prodotto", "c": "CATEGORIA"}], "remove": ["nome"], "recipe": {"title": "Titolo", "query": "ricerca", "platform": "youtube"}}. CATEGORIE: Frutta e Verdura, Macelleria, Pescheria, Latticini, Surgelati, Forno, Dispensa, Bevande, Detersivi, Igiene, Altro.` }] },
-                            generationConfig: { responseMimeType: "application/json", temperature: 0.1 }
-                        })
+							body: JSON.stringify({
+							  contents: [
+							    { role: "user", parts: [{ text: `Input: "${query}"` }] }
+							  ],
+							  systemInstruction: {
+							    role: "system",
+							    parts: [{ text: `Restituisci SOLO JSON: {"add": [...` }]
+							  },
+							  generationConfig: {
+							    responseMimeType: "application/json",
+							    temperature: 0.1
+							  }
+							})
                     });
 
                     const data = await response.json();
