--- a/index.html
+++ b/index.html
@@ -324,10 +324,10 @@
     <div className="w-[1px] h-4 bg-slate-200 mx-1"></div>
 
     {/* Pulisci solo presi */}
-    <button
-      onClick={clearBoughtItems}
-      className="has-tooltip p-2 text-slate-400 hover:text-orange-500 active:scale-90 transition-all"
-    >
+	<button
+		  onClick={() => setShowConfirmClearBought(true)}
+		  className="has-tooltip p-2 text-slate-400 hover:text-orange-500 active:scale-90 transition-all"
+		>
       <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" strokeWidth="2.5">
         <path d="M20 6L9 17l-5-5"/>
         <path d="M3 6h18" opacity="0.3"/>
@@ -576,6 +576,95 @@
                             </div>
                         </div>
                     )}
+
+				{showConfirmClearBought && (
+				  <div className="fixed inset-0 bg-slate-900/80 backdrop-blur-sm z-[70] flex items-center justify-center p-6">
+				    <div className="bg-white rounded-[2.5rem] w-full max-w-xs p-8 text-center shadow-2xl">
+				      <h3 className="text-xl font-black mb-2 uppercase">Rimuovere i presi?</h3>
+				      <p className="text-[11px] text-slate-500 font-bold uppercase mb-6">
+				        Verranno eliminati solo gli articoli segnati come acquistati.
+				      </p>
+				      <div className="flex flex-col gap-3">
+				        <button
+				          onClick={() => {
+				            clearBoughtItems();
+				            setShowConfirmClearBought(false);
+				          }}
+				          className="bg-orange-500 text-white rounded-2xl py-4 font-black uppercase text-xs"
+				        >
+				          Pulisci presi
+				        </button>
+				        <button
+				          onClick={() => setShowConfirmClearBought(false)}
+				          className="bg-slate-100 text-slate-500 rounded-2xl py-4 font-black uppercase text-xs"
+				        >
+				          Annulla
+				        </button>
+				      </div>
+				    </div>
+				  </div>
+				)}
+
+				{showHistory && (
+					  <div className="fixed inset-0 bg-slate-900/70 backdrop-blur-sm z-[65] flex items-center justify-center p-6">
+					    <div className="bg-white rounded-[2.5rem] w-full max-w-sm p-8 shadow-2xl flex flex-col max-h-[70vh]">
+					      <div className="flex items-center justify-between mb-4">
+					        <h3 className="text-lg font-black uppercase">Cronologia</h3>
+					        <button
+					          onClick={() => setShowHistory(false)}
+					          className="text-slate-300 hover:text-slate-500"
+					        >
+					          <svg viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="currentColor" strokeWidth="2.5">
+					            <line x1="18" y1="6" x2="6" y2="18"/>
+					            <line x1="6" y1="6" x2="18" y2="18"/>
+					          </svg>
+					        </button>
+					      </div>
+					      <div className="flex-1 overflow-y-auto pr-1 space-y-2">
+					        {history.length === 0 && (
+					          <p className="text-[11px] text-slate-400 font-bold uppercase text-center">
+					            Nessuna richiesta ancora.
+					          </p>
+					        )}
+					        {history.map(entry => (
+					          <div
+					            key={entry.id}
+					            className="px-4 py-3 rounded-2xl bg-slate-50 border border-slate-100 text-xs font-bold text-slate-700"
+					          >
+					            <div className="text-[10px] text-slate-400 uppercase mb-1">
+					              {new Date(entry.ts).toLocaleString('it-IT')}
+					            </div>
+					            {entry.text}
+					          </div>
+					        ))}
+					      </div>
+					      {history.length > 0 && (
+					        <button
+					          onClick={() => setHistory([])}
+					          className="mt-4 w-full bg-slate-900 text-white rounded-2xl py-3 text-[11px] font-black uppercase"
+					        >
+					          Svuota cronologia
+					        </button>
+					      )}
+					    </div>
+					  </div>
+					)}
+
+					{aiEnabled && (
+						  <div className="flex items-center justify-between p-4 bg-slate-50 rounded-2xl border border-slate-100">
+						    <span className="text-[10px] font-black text-slate-700 uppercase tracking-tight">
+						      Mostra Ricette
+						    </span>
+						    <label className="toggle-switch">
+						      <input
+						        type="checkbox"
+						        checked={showSocial}
+						        onChange={() => setShowSocial(!showSocial)}
+						      />
+						      <span className="slider"></span>
+						    </label>
+						  </div>
+						)}
 
                     {errorModal.show && (
                         <div className="fixed inset-0 bg-slate-900/80 backdrop-blur-sm z-[100] flex items-center justify-center p-6">
