--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
                         </div>
                     )}
 
-                    {/* Toggles extra (solo se IA attiva) */}
+                    {/* Toggles extra (solo se IA attiva) 
                     {aiEnabled && (
                         <div className="flex items-center justify-between p-4 bg-slate-50 rounded-2xl border border-slate-100 mt-4">
                             <span className="text-[10px] font-black text-slate-700 uppercase tracking-tight">
@@ -823,6 +823,7 @@
                             </label>
                         </div>
                     )}
+                    */}
 
                     {/* Modale errore */}
                     {errorModal.show && (
