--- a/index.html
+++ b/index.html
@@ -807,6 +807,24 @@
                         </div>
                     )}
 
+                    {/* Mostra Ricette (solo se IA attiva) */}
+                    {aiEnabled && (
+                      <div className="flex items-center justify-between p-4 bg-slate-50 rounded-2xl border border-slate-100">
+                        <span className="text-[10px] font-black text-slate-700 uppercase tracking-tight">
+                          Mostra Ricette
+                        </span>
+                        <label className="toggle-switch">
+                          <input
+                            type="checkbox"
+                            checked={showSocial}
+                            onChange={() => setShowSocial(!showSocial)}
+                          />
+                          <span className="slider"></span>
+                        </label>
+                      </div>
+                    )}
+
+
                     {/* Toggles extra (solo se IA attiva) 
                     {aiEnabled && (
                         <div className="flex items-center justify-between p-4 bg-slate-50 rounded-2xl border border-slate-100 mt-4">
