--- a/index.html
+++ b/index.html
@@ -601,6 +601,7 @@
                                 <div className="space-y-4 mb-10">
                                     {/* API KEY */}
                                     <div>
+                                    {aiEnabled && (
                                         <label className="text-[10px] font-black text-slate-400 uppercase tracking-widest mb-2 block ml-1">
                                             Gemini API Key
                                         </label>
@@ -612,7 +613,8 @@
                                             className="w-full bg-slate-50 border-2 border-slate-100 rounded-2xl px-5 py-4 text-sm font-bold focus:border-blue-500 outline-none"
                                         />
                                     </div>
-
+                                    )}
+                                    
                                     {/* IA Attiva */}
                                     <div className="flex items-center justify-between p-4 bg-slate-50 rounded-2xl">
                                         <span className="text-[10px] font-black uppercase">IA Attiva</span>
